# glicko2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  glicko2.py  main.py  pyproject.toml  requirements.txt
glicko2/: __init__.py  constant_value.py  game_player.py  game_rate_calculate.py  glicko2.py  player.py  rate_period.py  rating.py  rating_system.py
glicko2/game_player/: game_player.py  player.py  rating.py
glicko2/game_player/player/: player.py
glicko2/game_player/player/rating/: rating.py
glicko2/glicko2_np/: glicko2_np.py
glicko2/rating_system/: rating_system.py
glicko2/rating_system/glicko2/: glicko2.py
glicko2/rating_system/glicko2_np/: glicko2_np.py
tests/: test_glicko2.py  test_rate_period.py
tests/test_game/: sample.csv  sample_result.json  test_game.py
tests/test_np/: test_np_glicko2.py  test_np_rate_period.py
tests/utils/: make_random_data.py
