[project]
name = "glicko2"
version = "0.1.0"
description = "An implementation of the Glicko-2 rating system for Python "
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
