[project]
name = "glicko2"
version = "0.1.0"
description = "An implementation of the Glicko-2 rating system for Python "
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
option-dependencies = [
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-import-conventions
    "ICN",
    # flake8-simplify
    "SIM",
    # flake8-comprehensions
    "C4",
    # flake8-unused-arguments
    "ARG",
    # flake8-pytest-style 
    "PT",
    # pyupgrade
    "UP",
    # isort
    "I",
    # Ruff-specific
    "RUF",
    # pylint convention
    "PLC",
    # pylint error
    "PLE",
    # pep8-naming
    "N",
]
allowed-confusables = ["σ"] # because it is used in formula 

[tool.ruff]
# Allow lines to be as long as 140.
line-length = 140